fixed image distortion

--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,7 @@ ul li {
 .product-tile__img-container .product-tile__img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .product-tile__img-container .product-tile__stock-msg {
   color: #8d8f9a;
@@ -317,6 +318,7 @@ ul li {
   width: 100%;
   height: 80px;
   margin-bottom: 10px;
+  object-fit: cover;
 }
 .pdp__all-images img:hover {
   box-shadow: 2px 4px 5px #1d1f22;
@@ -327,7 +329,6 @@ ul li {
 }
 .pdp__details__image {
   width: 42.5vw;
-  height: 511px;
   margin-right: 10%;
 }
 .pdp__details__description {
@@ -515,16 +516,7 @@ ul li {
 .cart-count__img-switcher .cart-count__img-container .cart-count__img {
   width: 100%;
   height: 100%;
-}
-.cart-count__img-switcher .cart-count__img-container::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  opacity: 0.3;
+  object-fit: contain;
 }
 .cart-count__img-switcher .cart-count__icon-container {
   display: flex;
@@ -537,6 +529,9 @@ ul li {
   width: 20px;
   height: 20px;
   filter: invert(99%) sepia(1%) saturate(0%) hue-rotate(154deg) brightness(103%) contrast(102%);
+  background-color: #666;
+  padding: 2px;
+  border-radius: 50%;
 }
 
 .cart-overlay {
